--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-FRONTEND_URL =
+FRONTEND_URL = "http://localhost:3000"
 MONGODB_URL = mongodb+srv://itt1819064:a3qY35yICsmuTrtZ@ecommerce.nivvg.mongodb.net/?retryWrites=true&w=majority&appName=Ecommerce
 RESEND_API = re_XYXuy9Ky_8QgTcsmtHZd4cdmRh47VVfoG
