--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 FRONTEND_URL = "http://localhost:3000"
 MONGODB_URL = mongodb+srv://itt1819064:a3qY35yICsmuTrtZ@ecommerce.nivvg.mongodb.net/?retryWrites=true&w=majority&appName=Ecommerce
 RESEND_API = re_XYXuy9Ky_8QgTcsmtHZd4cdmRh47VVfoG
+SECRET_KEY_ACCESS_TOKEN = mhvdzarth
+SECRET_KEY_REFRESH_TOKEN = bhtshdg
